--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,10 @@
     >
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400;500;600;700&family=Montserrat:wght@300;400;700&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400;500;600;700&family=Montserrat:wght@300;400;700&display=swap"
+      rel="stylesheet"
+    >
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
 
@@ -19,6 +22,12 @@
     <header class="header">
       <div class="container">
         <div class="header__content">
+          <img
+            src="images/header-bg.png"
+            alt="Header background"
+            class="header__background"
+          >
+
           <a href="#menu" class="header__menu-link">
             <img
               src="images/icons/icon-burger-menu.svg"
@@ -46,10 +55,10 @@
             </div>
           </div>
 
-          <div class="header__events">
-            <a href="#" class="events">
-              <hr class="events__line">
-              <p class="events__text">ПОДІЇ</p>
+          <div class="header__events-link">
+            <a href="#current-events" class="events-link">
+              <hr class="events-link__line">
+              <p class="events-link__text">ПОДІЇ</p>
             </a>
           </div>
         </div>
@@ -70,16 +79,27 @@
           <nav class="nav menu__nav">
             <ul class="nav__list">
               <li class="nav__item">
-                <a href="#gallery" class="nav__link">Галерея</a>
+                <a href="#gallery" class="nav__link">
+                  Галерея
+                </a>
               </li>
+
               <li class="nav__item">
-                <a href="#about-us" class="nav__link">Про Нас</a>
+                <a href="#subscription" class="nav__link">
+                  Про Нас
+                </a>
               </li>
+
               <li class="nav__item">
-                <a href="#current-events" class="nav__link">Виставки та події</a>
+                <a href="#current-events" class="nav__link">
+                  Виставки та події
+                </a>
               </li>
+
               <li class="nav__item">
-                <a href="#contacts" class="nav__link">Контакти</a>
+                <a href="#contacts" class="nav__link">
+                  Контакти
+                </a>
               </li>
             </ul>
           </nav>
@@ -92,31 +112,154 @@
             <div class="schedule__content">
               <ul class="schedule__list">
                 <li class="schedule__item">
-                  <span class="schedule--text--bold">12:00 — 20:00</span> середа
+                  <span class="schedule--text--bold">12:00 — 20:00</span>
+                  середа
                 </li>
                 <li class="schedule__item">
-                  <span class="schedule--text--bold">12:00 — 20:00</span> четвер
+                  <span class="schedule--text--bold">12:00 — 20:00</span>
+                  четвер
                 </li>
                 <li class="schedule__item">
-                  <span class="schedule--text--bold">12:00 — 20:00</span> п’ятниця
+                  <span class="schedule--text--bold">12:00 — 20:00</span>
+                  п’ятниця
                 </li>
                 <li class="schedule__item">
-                  <span class="schedule--text--bold">11:00 — 19:00</span> субота
+                  <span class="schedule--text--bold">11:00 — 19:00</span>
+                  субота
                 </li>
                 <li class="schedule__item">
-                  <span class="schedule--text--bold">11:00 — 19:00</span> неділя
+                  <span class="schedule--text--bold">11:00 — 19:00</span>
+                  неділя
                 </li>
               </ul>
 
               <p class="schedule__info">
-                <span class="schedule--text--bold">Вихідні:</span> понеділок, вівторок <br>
+                <span class="schedule--text--bold">Вихідні:</span>
+                понеділок, вівторок <br>
                 Каса припиняє роботу за 1 годину до закриття музею
               </p>
             </div>
           </div>
         </div>
       </div>
+
       <div class="menu__transparency"></div>
     </aside>
+
+    <main class="main">
+      <div class="container">
+        <div class="main__content">
+          <section class="current-events" id="current-events">
+            <h2 class="current-events__title section-title">
+              Актуальні події
+            </h2>
+
+            <div class="current-events__content">
+              <article class="event">
+                <img
+                  src="images/paintings/Painting 1.png"
+                  alt="Painting 1"
+                  class="event__image event__image-exposition"
+                >
+
+                <div class="event__description event__description-exposition">
+                  <div class="description">
+                    <div class="description__top">
+                      <p class="description__type">ВИСТАВКА</p>
+                      <p class="description__date">26.08-29.11.2019</p>
+                    </div>
+
+                    <div class="description__middle">
+                      <p class="description__title">Йду і повертаюсь</p>
+                      <img
+                        src="images/icons/icon-red.svg"
+                        alt="Red icon"
+                        class="description__icon"
+                      >
+                    </div>
+
+                    <p class="description__info">
+                      Національний художній музей
+                      України презентує унікальну частину
+                      колекції Градобанку - українське
+                      мистецтво другої половини
+                      1980-1995 років.
+                    </p>
+                  </div>
+                </div>
+              </article>
+
+              <article class="event">
+                <img
+                  src="images/paintings/Painting 2.png"
+                  alt="Painting 2"
+                  class="event__image event__image-exposition"
+                >
+
+                <div class="event__description event__description-exposition">
+                  <div class="description">
+                    <div class="description__top">
+                      <p class="description__type">ВИСТАВКА</p>
+                      <p class="description__date">26.08-29.11.2019</p>
+                    </div>
+
+                    <div class="description__middle">
+                      <p class="description__title">І спогади і мрії</p>
+                      <img
+                        src="images/icons/icon-red.svg"
+                        alt="Red icon"
+                        class="description__icon"
+                      >
+                    </div>
+
+                    <p class="description__info">
+                      Національний художній музей
+                      України до 100 річчя від дня
+                      народження видатної української
+                      художниці Тетяни Яблонської
+                      відкриває ретроспективну ювілейну
+                      виставку «І спогади і мрії».
+                    </p>
+                  </div>
+                </div>
+              </article>
+
+              <article class="event">
+                <img
+                  src="images/paintings/Painting 3.png"
+                  alt="Painting 3"
+                  class="event__image event__image-lection"
+                >
+
+                <div class="event__description event__description-lection">
+                  <div class="description description-lection">
+                    <div class="description__top description-lection__top">
+                      <p class="description__type">ЛЕКЦІЯ</p>
+                      <p class="description__date">26/08/2019 - 11:00</p>
+                    </div>
+
+                    <p class="description__title description-lection__title">
+                      Від класицизму до романтизму
+                    </p>
+                  </div>
+                </div>
+              </article>
+            </div>
+          </section>
+
+          <section class="gallery" id="gallery">
+            <h2 class="gallery__title section-title">
+              Галерея
+            </h2>
+          </section>
+
+          <section class="subscription" id="subscription">
+            <h2 class="subscription__title section-title">
+              Підписка
+            </h2>
+          </section>
+        </div>
+      </div>
+    </main>
   </body>
 </html>
