--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,312 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="page">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
-    <link rel="stylesheet" href="./styles/main.scss">
+    <title>Museum</title>
+    <link rel="icon" href="../src/images/logo.svg">
+    <link rel="stylesheet" href="./styles/style.scss">
   </head>
   <body>
-    <h1>Hello Mate Academy</h1>
+    <div class="wrapper">
+      <header id="home" class="page__header header">
+        <div class="header-top">
+          <div class="header-top__top-bar top-bar">
+            <a href="#menu" class="icon icon--menu"></a>
+
+            <a href="#home" class="top-bar__logo-link">
+              <img
+                src="images/logo.svg"
+                alt="Logo"
+                class="top-bar__logo"
+              >
+            </a>
+          </div>
+        </div>
+
+        <div class="header-bottom">
+          <h1 class="header-bottom__title">ХУДОЖНІЙ МУЗЕЙ</h1>
+          <div class="header-bottom__tickets tickets">
+            <div class="tickets__label">КВИТКИ</div>
+
+            <a href="#events" class="tickets__button button button--green"></a>
+          </div>
+
+          <a href="#events" class="header__events-link">ПОДІЇ</a>
+        </div>
+
+
+      </header>
+
+      <aside class="page__menu menu" id="menu">
+        <div class="menu__container">
+          <div class="menu__top-bar top-bar">
+            <a href="#" class="icon icon--close"></a>
+          </div>
+          <div class="menu__content">
+            <div class="menu__items">
+              <a href="#gallery" class="menu__item">Галерея</a>
+              <a href="#about-us" class="menu__item">Про Нас</a>
+              <a href="#events" class="menu__item">Виставки та події</a>
+              <a href="#contacts" class="menu__item">Контакти</a>
+            </div>
+
+            <div class="menu__schedule schedule">
+              <h4 class="schedule__title">Графік роботи</h4>
+              <div class="schedule__box">
+                <ul class="schedule__list">
+                  <li class="schedule__item"><span>12:00 — 20:00</span> середа</li>
+                  <li class="schedule__item"><span>12:00 — 20:00</span> четвер</li>
+                  <li class="schedule__item"><span>12:00 — 20:00</span> п’ятниця</li>
+                  <li class="schedule__item"><span>11:00 — 19:00</span> субота</li>
+                  <li class="schedule__item"><span>11:00 — 19:00</span> неділя</li>
+                </ul>
+
+                <div class="schedule__info">
+                  <span>Вихідні:</span> понеділок, вівторок
+                  Каса припиняє роботу за 1 годину
+                  до закриття музею
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </aside>
+
+      <section id="events" class="page__events events">
+        <div class="events__container">
+          <h2 class="events__title title">Актуальні
+            події
+          </h2>
+
+          <div class="events__item item-events">
+            <a href="#" class="item-events__image-link">
+              <img
+                src="./images/events/events-image-01.png"
+                alt="Picture"
+                class="item-events__image"
+              >
+            </a>
+
+            <div class="item-events__info">
+              <div class="item-events__header">
+                <div class="item-events__label">ВИСТАВКА</div>
+                <div class="item-events__date">26.08-29.11.2019</div>
+              </div>
+
+              <a href="#" class="item-events__title-link">
+                <h3 class="item-events__title">
+                  Йду і повертаюсь
+                </h3>
+              </a>
+
+              <p class="item-events__text">Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.</p>
+            </div>
+          </div>
+
+          <div class="events__item item-events">
+            <a href="#" class="item-events__image-link">
+              <img
+                src="./images/events/events-image-02.png"
+                alt="Picture"
+                class="item-events__image"
+              >
+            </a>
+
+            <div class="item-events__info">
+              <div class="item-events__header">
+                <div class="item-events__label">ВИСТАВКА</div>
+                <div class="item-events__date">26.08-29.11.2019</div>
+              </div>
+
+              <a href="#" class="item-events__title-link">
+                <h3 class="item-events__title">
+                  І спогади і мрії
+                </h3>
+              </a>
+
+              <p class="item-events__text">Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».</p>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="page__lection lection">
+        <a href="#" class="lection__image-link">
+          <img
+            src="./images/lection/lection-image.png"
+            alt="Picture"
+            class="lection__image"
+          >
+        </a>
+
+        <div class="lection__info">
+          <div class="lection__header">
+            <div class="lection__label">ЛЕКЦІЯ</div>
+            <div class="lection__date">26/08/2019 - 11:00</div>
+          </div>
+
+          <a href="#" class="lection__title-link">
+            <h3 class="lection__title">
+              Від класицизму до романтизму
+            </h3>
+          </a>
+
+        </div>
+      </section>
+
+      <section id="gallery" class="page__gallery gallery">
+        <div class="gallery__container">
+          <h2 class="gallery__title title">Галерея</h2>
+          <div class="gallery__box">
+            <a href="#" class="gallery__image-link gallery__image-link--1">
+              <img
+                src="./images/gallery/gallery-image-01.png"
+                alt="Picture"
+                class="gallery__image"
+              >
+            </a>
+
+            <a href="#" class="gallery__image-link gallery__image-link--2">
+              <img
+                src="./images/gallery/gallery-image-02.jpg"
+                alt="Picture"
+                class="gallery__image"
+              >
+            </a>
+
+            <a href="#" class="gallery__image-link gallery__image-link--3">
+              <img
+                src="./images/gallery/gallery-image-03.jpg"
+                alt="Picture"
+                class="gallery__image"
+              >
+            </a>
+
+            <a href="#" class="gallery__image-link gallery__image-link--4">
+              <img
+                src="./images/gallery/gallery-image-04.jpg"
+                alt="Picture"
+                class="gallery__image"
+              >
+            </a>
+
+            <a href="#" class="gallery__image-link gallery__image-link--5">
+              <img
+                src="./images/gallery/gallery-image-05.jpg"
+                alt="Picture"
+                class="gallery__image"
+              >
+            </a>
+          </div>
+        </div>
+      </section>
+
+      <section class="page__subscribe subscribe" id="about-us">
+        <h3 class="subscribe__title title title--white">Підписка</h3>
+
+        <p class="subscribe__text">Бути в курсі всіх актуальних подій та останніх новин.</p>
+
+        <form
+          action="#"
+          method="post"
+          class="subscribe__form"
+          onsubmit="this.reset(); return false;"
+        >
+          <input
+            type="email"
+            class="subscribe__input"
+            placeholder="E-mail"
+            required
+          >
+          <button type="submit" class="subscribe__button button button--red"></button>
+        </form>
+      </section>
+
+      <footer class="page__footer footer">
+        <div class="footer__container">
+
+
+          <div class="footer__body">
+            <div class="footer__head">
+              <a href="#home" class="footer__logo-link">
+                <img
+                  src="images/logo.svg"
+                  alt="Logo"
+                  class="footer__logo"
+                >
+              </a>
+
+              <div class="footer__icons">
+                <a
+                  href="https://uk-ua.facebook.com/"
+                  class="icon icon--facebook"
+                  target="_blank"
+                >
+                </a>
+
+                <a
+                  href="https://www.instagram.com/"
+                  class="icon icon--instagram"
+                  target="_blank"
+                >
+                </a>
+              </div>
+            </div>
+
+            <div class="footer__schedule schedule-footer">
+              <h4 class="schedule-footer__title">Графік роботи</h4>
+              <div class="schedule-footer__box">
+                <ul class="schedule-footer__list">
+                  <li class="schedule-footer__item"><span>12:00 — 20:00</span> середа</li>
+                  <li class="schedule-footer__item"><span>12:00 — 20:00</span> четвер</li>
+                  <li class="schedule-footer__item"><span>12:00 — 20:00</span> п’ятниця</li>
+                  <li class="schedule-footer__item"><span>11:00 — 19:00</span> субота</li>
+                  <li class="schedule-footer__item"><span>11:00 — 19:00</span> неділя</li>
+                </ul>
+
+                <div class="schedule-footer__info">
+                  <span>Вихідні</span> понеділок, вівторок<br>
+                  Каса припиняє роботу за 1 годину
+                  до закриття музею
+                </div>
+              </div>
+            </div>
+
+            <div id="contacts" class="footer__contacts contacts">
+              <h4 class="contacts__title">Контакти:</h4>
+              <div class="contacts__info">
+                <a
+                  href="https://www.google.com/maps/search/%D0%B2%D1%83%D0%BB.+%D0%9C.+%D0%93%D1%80%D1%83%D1%88%D0%B5%D0%B2%D1%81%D1%8C%D0%BA%D0%BE%D0%B3%D0%BE,+6;+%D0%9A%D0%B8%D1%97%D0%B2,+01001/@50.4462546,30.5095823,15z/data=!3m1!4b1?entry=ttu" class="contacts__link"
+                  target="_blank"
+                >
+                вул. М. Грушевського, 6; Київ, 01001
+                </a>
+                <a href="tel:+38 (044) 278-13-57" class="contacts__link">тел. +38 (044) 278-13-57</a>
+                <a href="tel:+38 (044) 278-74-54" class="contacts__link">факс +38 (044) 278-74-54</a>
+                <a href="mailto: info@namu.kiev.ua" class="contacts__link">e-mail: info@namu.kiev.ua</a>
+              </div>
+            </div>
+
+            <div class="footer__menu menu-footer">
+              <div class="menu-footer__items">
+                <a href="#gallery" class="menu-footer__item">Галерея</a>
+                <a href="#about-us" class="menu-footer__item">Про Нас</a>
+                <a href="#events" class="menu-footer__item">Виставки та події</a>
+                <a href="#contacts" class="menu-footer__item">Контакти</a>
+              </div>
+            </div>
+          </div>
+
+          <a href="#home" class="footer__link-up"></a>
+
+          <div class="footer__bottom">
+            <p>Designed by Zhyriada Marina</p>
+            <p>Copyright © 2019. All Rights Reserved.</p>
+          </div>
+        </div>
+      </footer>
+    </div>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
