--- a/src/index.html
+++ b/src/index.html
@@ -45,7 +45,7 @@
           <div class="header__tickets">
             <div class="tickets">
               <p class="tickets__text">КВИТКИ</p>
-              <a href="#" class="tickets__link">
+              <a href="#current-events" class="tickets__link">
                 <img
                   src="images/icons/icon-vector.svg"
                   alt="Vector icon"
@@ -55,10 +55,10 @@
             </div>
           </div>
 
-          <div class="header__events-link">
-            <a href="#current-events" class="events-link">
-              <hr class="events-link__line">
-              <p class="events-link__text">ПОДІЇ</p>
+          <div class="header__exhibitions">
+            <a href="#current-events" class="exhibitions">
+              <hr class="exhibitions__line">
+              <p class="exhibitions__text">ПОДІЇ</p>
             </a>
           </div>
         </div>
@@ -107,7 +107,7 @@
           <hr class="menu__divider">
 
           <div class="schedule menu__schedule">
-            <div class="schedule__title">Графік роботи</div>
+            <h4 class="schedule__title">Графік роботи</h4>
 
             <div class="schedule__content">
               <ul class="schedule__list">
@@ -147,119 +147,334 @@
     </aside>
 
     <main class="main">
-      <div class="container">
-        <div class="main__content">
-          <section class="current-events" id="current-events">
-            <h2 class="current-events__title section-title">
-              Актуальні події
-            </h2>
+      <div class="main__content">
+        <section class="current-events container" id="current-events">
+          <h2 class="current-events__title section-title">
+            Актуальні події
+          </h2>
 
-            <div class="current-events__content">
-              <article class="event">
-                <img
-                  src="images/paintings/Painting 1.png"
-                  alt="Painting 1"
-                  class="event__image event__image-exposition"
-                >
+          <div class="current-events__content">
+            <article class="event current-events__event">
+              <img
+                src="images/paintings/Painting 1.png"
+                alt="Painting 1"
+                class="event__image event__image-exposition"
+              >
 
-                <div class="event__description event__description-exposition">
-                  <div class="description">
-                    <div class="description__top">
-                      <p class="description__type">ВИСТАВКА</p>
-                      <p class="description__date">26.08-29.11.2019</p>
-                    </div>
-
-                    <div class="description__middle">
-                      <p class="description__title">Йду і повертаюсь</p>
-                      <img
-                        src="images/icons/icon-red.svg"
-                        alt="Red icon"
-                        class="description__icon"
-                      >
-                    </div>
-
-                    <p class="description__info">
-                      Національний художній музей
-                      України презентує унікальну частину
-                      колекції Градобанку - українське
-                      мистецтво другої половини
-                      1980-1995 років.
-                    </p>
+              <div class="event__description event__description-exposition">
+                <div class="description">
+                  <div class="description__top">
+                    <p class="description__type">ВИСТАВКА</p>
+                    <p class="description__date">26.08-29.11.2019</p>
                   </div>
-                </div>
-              </article>
 
-              <article class="event">
-                <img
-                  src="images/paintings/Painting 2.png"
-                  alt="Painting 2"
-                  class="event__image event__image-exposition"
-                >
-
-                <div class="event__description event__description-exposition">
-                  <div class="description">
-                    <div class="description__top">
-                      <p class="description__type">ВИСТАВКА</p>
-                      <p class="description__date">26.08-29.11.2019</p>
-                    </div>
-
-                    <div class="description__middle">
-                      <p class="description__title">І спогади і мрії</p>
-                      <img
-                        src="images/icons/icon-red.svg"
-                        alt="Red icon"
-                        class="description__icon"
-                      >
-                    </div>
-
-                    <p class="description__info">
-                      Національний художній музей
-                      України до 100 річчя від дня
-                      народження видатної української
-                      художниці Тетяни Яблонської
-                      відкриває ретроспективну ювілейну
-                      виставку «І спогади і мрії».
-                    </p>
+                  <div class="description__middle">
+                    <h3 class="description__title">Йду і повертаюсь</h3>
+                    <img
+                      src="images/icons/icon-red.svg"
+                      alt="Red icon"
+                      class="description__icon"
+                    >
                   </div>
+
+                  <p class="description__info">
+                    Національний художній музей
+                    України презентує унікальну частину
+                    колекції Градобанку - українське
+                    мистецтво другої половини
+                    1980-1995 років.
+                  </p>
                 </div>
-              </article>
+              </div>
+            </article>
 
-              <article class="event">
-                <img
-                  src="images/paintings/Painting 3.png"
-                  alt="Painting 3"
-                  class="event__image event__image-lection"
-                >
+            <article class="event current-events__event">
+              <img
+                src="images/paintings/Painting 2.png"
+                alt="Painting 2"
+                class="event__image event__image-exposition"
+              >
 
-                <div class="event__description event__description-lection">
-                  <div class="description description-lection">
-                    <div class="description__top description-lection__top">
-                      <p class="description__type">ЛЕКЦІЯ</p>
-                      <p class="description__date">26/08/2019 - 11:00</p>
-                    </div>
-
-                    <p class="description__title description-lection__title">
-                      Від класицизму до романтизму
-                    </p>
+              <div class="event__description event__description-exposition">
+                <div class="description">
+                  <div class="description__top">
+                    <p class="description__type">ВИСТАВКА</p>
+                    <p class="description__date">26.08-29.11.2019</p>
                   </div>
+
+                  <div class="description__middle">
+                    <h3 class="description__title">І спогади і мрії</h3>
+                    <img
+                      src="images/icons/icon-red.svg"
+                      alt="Red icon"
+                      class="description__icon"
+                    >
+                  </div>
+
+                  <p class="description__info">
+                    Національний художній музей
+                    України до 100 річчя від дня
+                    народження видатної української
+                    художниці Тетяни Яблонської
+                    відкриває ретроспективну ювілейну
+                    виставку «І спогади і мрії».
+                  </p>
                 </div>
-              </article>
-            </div>
-          </section>
+              </div>
+            </article>
 
-          <section class="gallery" id="gallery">
-            <h2 class="gallery__title section-title">
-              Галерея
-            </h2>
-          </section>
+            <article class="event current-events__event">
+              <img
+                src="images/paintings/Painting 3.png"
+                alt="Painting 3"
+                class="event__image event__image-lection"
+              >
 
-          <section class="subscription" id="subscription">
+              <div class="event__description event__description-lection">
+                <div class="description description-lection">
+                  <div class="description__top description-lection__top">
+                    <p class="description__type">ЛЕКЦІЯ</p>
+                    <p class="description__date">26/08/2019 - 11:00</p>
+                  </div>
+
+                  <h3 class="description__title description-lection__title">
+                    Від класицизму до романтизму
+                  </h3>
+                </div>
+              </div>
+            </article>
+          </div>
+        </section>
+
+        <section class="gallery container" id="gallery">
+          <h2 class="gallery__title section-title">
+            Галерея
+          </h2>
+
+          <div class="gallery__content">
+            <img
+              src="images/gallery/Gallery painting 1.png"
+              alt="Gallery painting 1"
+              class="gallery__image"
+            >
+
+            <img
+              src="images/gallery/Gallery painting 2 tablet.png"
+              alt="Gallery painting 2 tablet"
+              class="gallery__image gallery__image--tablet"
+            >
+
+            <img
+              src="images/gallery/Gallery painting 2 desktop.png"
+              alt="Gallery painting 2 desktop"
+              class="
+                gallery__image
+                gallery__image--desktop
+                gallery__image--desktop--wide
+           ">
+
+            <img
+              src="images/gallery/Gallery painting 3 desktop.png"
+              alt="Gallery painting 3 desktop"
+              class="
+                gallery__image
+                gallery__image--desktop
+                gallery__image--desktop--wide
+           ">
+
+            <img
+              src="images/gallery/Gallery painting 4 desktop.png"
+              alt="Gallery painting 4 desktop"
+              class="gallery__image gallery__image--desktop"
+            >
+          </div>
+        </section>
+
+        <section class="subscription main__subscription" id="subscription">
+          <div class="subscription__content container">
             <h2 class="subscription__title section-title">
               Підписка
             </h2>
-          </section>
-        </div>
+
+            <p class="subscription__info">
+              Бути в курсі всіх актуальних подій та останніх новин.
+            </p>
+
+            <form
+              action="#"
+              method="POST"
+              class="field subscription__field"
+              onsubmit="this.reset(); return false;"
+            >
+              <div class="field__content">
+                <label class="field__label">
+                  <input
+                    type="email"
+                    name="email"
+                    placeholder="E-mail"
+                    class="field__input"
+                    required
+                  >
+                </label>
+
+                <button type="submit" class="field__send">
+                  <img
+                    src="images/icons/icon-vector-black.svg"
+                    alt="Icon vector black"
+                    class="field__vector-icon"
+                  >
+                </button>
+              </div>
+            </form>
+          </div>
+        </section>
       </div>
     </main>
+
+    <footer class="footer">
+      <div class="container">
+        <div class="footer__content">
+          <div class="footer__icons">
+            <a href="#" class="footer__logo-link">
+              <p class="footer__logo">NA<br>MU</p>
+            </a>
+
+            <div class="footer__media-icons">
+              <a
+                href="https://www.facebook.com/namu.museum/"
+                target="_blank"
+                class="footer__facebook-link footer__icon-link"
+              >
+                <img
+                  src="images/icons/icon-facebook.svg"
+                  alt="Facebook icon"
+                  class="footer__facebook-icon footer__icon"
+                >
+              </a>
+
+              <a
+                href="https://www.instagram.com/namu.museum/?hl=en"
+                target="_blank"
+                class="footer__instagram-link footer__icon-link"
+              >
+                <img
+                  src="images/icons/icon-instagram.svg"
+                  alt="instagram icon"
+                  class="footer__instagram-icon footer__icon"
+                >
+              </a>
+            </div>
+          </div>
+
+          <div class="schedule footer__schedule">
+            <h4 class="schedule__title">Графік роботи</h4>
+
+            <div class="
+              schedule__content
+              schedule__content--flex-direction--column
+              schedule__content--gap--zero
+           ">
+              <ul class="schedule__list schedule__list--margin--zero">
+                <li class="schedule__item schedule__item--width--auto">
+                  <span class="schedule--text--bold">12:00 — 20:00</span>
+                  середа
+                </li>
+
+                <li class="schedule__item schedule__item--width--auto">
+                  <span class="schedule--text--bold">12:00 — 20:00</span>
+                  четвер
+                </li>
+
+                <li class="schedule__item schedule__item--width--auto">
+                  <span class="schedule--text--bold">12:00 — 20:00</span>
+                  п’ятниця
+                </li>
+
+                <li class="schedule__item schedule__item--width--auto">
+                  <span class="schedule--text--bold">11:00 — 19:00</span>
+                  субота
+                </li>
+
+                <li class="schedule__item schedule__item--width--auto">
+                  <span class="schedule--text--bold">11:00 — 19:00</span>
+                  неділя
+                </li>
+              </ul>
+
+              <br>
+
+              <p class="schedule__info">
+                <span class="schedule--text--bold">Вихідні:</span>
+                понеділок, вівторок <br>
+                Каса припиняє роботу за 1 годину до закриття музею
+              </p>
+            </div>
+          </div>
+
+          <div class="contacts footer__contacts" id="contacts">
+            <h4 class="contacts__title">Контакти:</h4>
+
+            <p class="contacts__info">
+              вул. М. Грушевського, 6; Київ, 01001
+              тел. +38 (044) 278-13-57
+              факс +38 (044) 278-74-54
+              e-mail: info@namu.kiev.ua
+            </p>
+          </div>
+
+          <a href="#" class="footer__home-link">
+            <img
+              src="images/icons/icon-arrow.svg"
+              alt="Icon arrow"
+              class="footer__home-arrow"
+            >
+          </a>
+
+          <hr class="footer__divider">
+
+          <nav class="nav footer__nav">
+            <ul class="
+              nav__list
+              nav__list--template-columns--fr
+              nav__list--gaps--custom
+           ">
+              <li class="nav__item">
+                <a href="#gallery" class="nav__link nav__link--color--main">
+                  Галерея
+                </a>
+              </li>
+
+              <li class="nav__item">
+                <a href="#subscription" class="nav__link nav__link--color--main">
+                  Про Нас
+                </a>
+              </li>
+
+              <li class="nav__item">
+                <a href="#current-events" class="nav__link nav__link--color--main">
+                  Виставки та події
+                </a>
+              </li>
+
+              <li class="nav__item">
+                <a href="#contacts" class="nav__link nav__link--color--main">
+                  Контакти
+                </a>
+              </li>
+            </ul>
+          </nav>
+
+          <div class="footer__credits">
+            <p class="footer__author">
+              Designed by Zhyriada Marina
+            </p>
+
+            <p class="footer__copyright">
+              Copyright © 2019. All Rights Reserved.
+            </p>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
